--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
-title: Reproducible code for Trost et al., 2024 "A continental-scale analysis of riverine particulate biogeochemistry"
-description: Code for processing National Ecological Observation Network (NEON) data of stream particulate and dissolved chemistry with boosted regression trees (BRT) machine learning modeling. 
+title: Trost et al. (2024): "A continental-scale analysis of riverine particulate biogeochemistry"
+description: Processed National Ecological Observation Network (NEON) data packages of stable isotopes in surface water (DP1.20206.001) and chemical properties of surface water 
+(DP1.20093.001) with R script for analyzing data. 
 
 publisher_text: 
 publisher_url: 
@@ -7,6 +8,6 @@ publisher_url:
 license_text: 
 license_url: 
 
-frequency: 
+frequency: None
 
 certificate_embed: 
