--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Trost et al. (2024), "A continental-scale analysis of riverine particulate biogeochemistry"
-description: Processed National Ecological Observation Network (NEON) data packages of stable isotopes in surface water (DP1.20206.001) and chemical properties of surface water (DP1.20093.001) with R script for analyzing data. 
+title: Trost et al. (2024), "Riverine particulate carbon, nitrogen, and phosphorus are decoupled from catchment factors at the continental-scale"
+description: Processed National Ecological Observation Network (NEON) data packages of stable isotopes in surface water (DP1.20206.001) and chemical properties of surface water (DP1.20093.001) with R script for processing and analyzing data. 
 
 publisher_text: 
 publisher_url: 
